--- a/app/src/main/res/layout/activity_transport_profile.xml
+++ b/app/src/main/res/layout/activity_transport_profile.xml
@@ -23,12 +23,13 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#EEEEEE">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:background="#FFFFFF"
             android:layout_height="wrap_content"
+            android:background="#FFFFFF"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -40,9 +41,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:background="#99121212"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:foreground="?android:attr/selectableItemBackground" />
+                    android:scaleType="centerCrop" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/companyPhoto"
@@ -50,9 +49,6 @@
                     android:layout_height="150dp"
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:foreground="?android:attr/selectableItemBackground"
                     android:src="@drawable/placeholder_header_user_dp" />
 
             </RelativeLayout>
@@ -70,7 +66,7 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/lato_bold"
                     android:maxLines="1"
-                    android:text="company_name"
+                    android:text=""
                     android:textAlignment="center"
                     android:textColor="@color/textColor"
                     android:textSize="16sp" />
@@ -85,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:fontFamily="@font/lato"
-                    android:text="description"
+                    android:text=""
                     android:textAlignment="center"
                     android:textColor="@color/textColor"
                     android:textSize="14sp" />
@@ -99,7 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lato"
-                    android:text="address"
+                    android:text=""
                     android:textAlignment="center"
                     android:textColor="@color/textColor"
                     android:textSize="14sp" />
@@ -128,13 +124,13 @@
 
                     <Space
                         android:layout_width="match_parent"
-                        android:layout_height="8dp"/>
+                        android:layout_height="8dp" />
 
                     <LinearLayout
                         android:id="@+id/telephone_number"
                         android:layout_width="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="110dp"
@@ -149,7 +145,7 @@
 
                         <Space
                             android:layout_width="8dp"
-                            android:layout_height="match_parent"/>
+                            android:layout_height="match_parent" />
 
                         <TextView
                             android:id="@+id/companyTelephoneNumber"
@@ -157,7 +153,7 @@
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="telephone_number"
+                            android:text=""
                             android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -166,8 +162,8 @@
                     <LinearLayout
                         android:id="@+id/cellphone_number"
                         android:layout_width="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="110dp"
@@ -182,7 +178,7 @@
 
                         <Space
                             android:layout_width="8dp"
-                            android:layout_height="match_parent"/>
+                            android:layout_height="match_parent" />
 
                         <TextView
                             android:id="@+id/companyCellphoneNumber"
@@ -190,7 +186,7 @@
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="cellphone_number"
+                            android:text=""
                             android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -199,8 +195,8 @@
                     <LinearLayout
                         android:id="@+id/email"
                         android:layout_width="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="110dp"
@@ -215,7 +211,7 @@
 
                         <Space
                             android:layout_width="8dp"
-                            android:layout_height="match_parent"/>
+                            android:layout_height="match_parent" />
 
                         <TextView
                             android:id="@+id/companyEmail"
@@ -223,7 +219,7 @@
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="email"
+                            android:text=""
                             android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
@@ -232,8 +228,8 @@
                     <LinearLayout
                         android:id="@+id/website"
                         android:layout_width="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="110dp"
@@ -248,7 +244,7 @@
 
                         <Space
                             android:layout_width="8dp"
-                            android:layout_height="match_parent"/>
+                            android:layout_height="match_parent" />
 
                         <TextView
                             android:id="@+id/companyWebsite"
@@ -256,7 +252,7 @@
                             android:layout_height="wrap_content"
                             android:ellipsize="end"
                             android:fontFamily="@font/lato"
-                            android:text="website"
+                            android:text=""
                             android:textAlignment="viewStart"
                             android:textColor="@color/textColor"
                             android:textSize="14sp" />
