--- a/app/src/main/res/layout/booking_admin_confirmed_item_layout.xml
+++ b/app/src/main/res/layout/booking_admin_confirmed_item_layout.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item"
@@ -29,7 +28,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
+                    android:ellipsize="end"
                     android:fontFamily="@font/lato_bold"
+                    android:maxLines="1"
                     android:text="Ref. No.:"
                     android:textColor="@color/textColor"
                     android:textSize="16sp" />
@@ -42,7 +43,7 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/lato_bold"
                     android:maxLines="1"
-                    android:text="reference_number"
+                    android:text=""
                     android:textColor="@color/textColor"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -76,8 +77,10 @@
                         android:id="@+id/bookingCustomerName"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato_bold"
-                        android:text="customer_name"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="16sp" />
 
@@ -85,8 +88,10 @@
                         android:id="@+id/bookingCustomerEmail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="customer_email"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
                 </LinearLayout>
@@ -113,7 +118,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="Contact Number:"
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
@@ -126,7 +133,9 @@
 
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="From:"
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
@@ -134,7 +143,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="To:"
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
@@ -146,7 +157,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="Date:"
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
@@ -154,7 +167,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="Time:"
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
@@ -166,7 +181,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="Adult:"
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
@@ -174,7 +191,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="Child:"
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
@@ -186,26 +205,32 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="Transport Name:"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                        android:textColor="@color/textColor" />
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="Driver Name:"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                        android:textColor="@color/textColor" />
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
+                        android:maxLines="1"
                         android:text="Plate No.:"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                        android:textColor="@color/textColor" />
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp" />
 
                     <Space
                         android:layout_width="match_parent"
@@ -214,7 +239,9 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato_black"
+                        android:maxLines="1"
                         android:text="Total:"
                         android:textColor="@color/textColor"
                         android:textSize="16sp" />
@@ -230,8 +257,10 @@
                         android:id="@+id/bookingContactNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="contact_number"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
 
@@ -243,8 +272,10 @@
                         android:id="@+id/bookingLocationFrom"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="location_from"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
 
@@ -252,8 +283,10 @@
                         android:id="@+id/bookingLocationTo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="location_to"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
 
@@ -265,8 +298,10 @@
                         android:id="@+id/bookingScheduleDate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="schedule_date"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
 
@@ -274,8 +309,10 @@
                         android:id="@+id/bookingScheduleTime"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="schedule_time"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
 
@@ -287,8 +324,10 @@
                         android:id="@+id/bookingCountAdult"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="adult_count"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
 
@@ -296,8 +335,10 @@
                         android:id="@+id/bookingCountChild"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="child_count"
+                        android:maxLines="1"
+                        android:text=""
                         android:textColor="@color/textColor"
                         android:textSize="14sp" />
 
@@ -309,28 +350,34 @@
                         android:id="@+id/bookingTransportName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="transport_name"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                        android:textColor="@color/textColor" />
+                        android:maxLines="1"
+                        android:text=""
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/bookingDriverName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="driver_name"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                        android:textColor="@color/textColor" />
+                        android:maxLines="1"
+                        android:text=""
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/bookingPlateNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:ellipsize="end"
                         android:fontFamily="@font/lato"
-                        android:text="plate_number"
-                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
-                        android:textColor="@color/textColor" />
+                        android:maxLines="1"
+                        android:text=""
+                        android:textColor="@color/textColor"
+                        android:textSize="14sp" />
 
                     <Space
                         android:layout_width="match_parent"
@@ -344,7 +391,9 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato_bold"
+                            android:maxLines="1"
                             android:text="@string/peso_sign"
                             android:textColor="@color/textColor"
                             android:textSize="16sp" />
@@ -353,18 +402,16 @@
                             android:id="@+id/price"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:ellipsize="end"
                             android:fontFamily="@font/lato_bold"
+                            android:maxLines="1"
                             android:text=""
                             android:textColor="@color/textColor"
                             android:textSize="16sp" />
                     </LinearLayout>
 
                 </LinearLayout>
-
             </LinearLayout>
-
         </LinearLayout>
-
     </LinearLayout>
-
 </LinearLayout>
